--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -122,6 +122,12 @@ dependencies:
   dot_navigation_bar: ^1.0.1+4
   custom_pin_screen: ^0.3.0
   local_auth: ^2.1.2
+  zego_express_engine: ^2.23.0
+  url_launcher: 6.1.5
+  universal_io: 2.0.4
+  path_provider: 2.0.11
+  archive: 3.3.1
+  share_plus: 4.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
