--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -128,6 +128,7 @@ dependencies:
   path_provider: 2.0.11
   archive: 3.3.1
   share_plus: 4.4.0
+  timeago: ^3.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
