--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,7 +85,7 @@ dependencies:
   showcaseview: ^2.0.0+1
   flutter_advanced_drawer: ^1.3.2
   splashscreen: ^1.3.5
-  flutter_native_splash: ^2.2.9
+  flutter_native_splash: ^2.2.16
   fl_chart: ^0.55.1
   firebase_app_check: ^0.1.1+4
   proste_bezier_curve: ^2.0.2
@@ -145,7 +145,24 @@ dev_dependencies:
   change_app_package_name: ^1.1.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+  flutter_launcher_icons: "^0.11.0"
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logoapp.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  # web:
+  #   generate: true
+  #   image_path: "path/to/image.png"
+  #   background_color: "#hexcode"
+  #   theme_color: "#hexcode"
+  # windows:
+  #   generate: true
+  #   image_path: "path/to/image.png"
+  #   icon_size: 48 # min:48, max:256, default: 48
+  # macos:
+  #   generate: true
+  #   image_path: "path/to/image.png"
 # The following section is specific to Flutter packages.
 flutter:
 
